# axum-shop

./: .env.example  .gitignore  README.md  axum-shop.postman_collection.json  docker-compose.yml
client/: next.config.ts  package.json
client/app/: layout.tsx
client/app/account/: page.tsx
client/app/admin/: layout.tsx
client/app/admin/categories/: page.tsx
client/app/admin/products/: page.tsx
client/app/login/: page.tsx
client/app/products/[id]/: page.tsx
client/app/register/: page.tsx
client/components/: admin-guard.tsx  auth-guard.tsx  catalog-page.tsx  navbar.tsx  pagination.tsx  product-card.tsx  product-filters.tsx  product-grid-skeleton.tsx
client/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  spinner.tsx
client/contexts/: auth-context.tsx
client/lib/: api.ts  images.ts  types.ts  utils.ts
server/: Cargo.toml  Makefile
server/migrations/: 20260512165623_init_tables.down.sql  20260512165633_init_tables.up.sql
server/src/: config.rs  error.rs  jwt_auth.rs  main.rs  openapi.rs  routes.rs  state.rs  validation.rs
server/src/handlers/: categories.rs  mod.rs  products.rs  users.rs
server/src/models/: categories.rs  mod.rs  products.rs  user.rs
