[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8.9"
axum-extra = {version = "0.12.6", features = ["cookie", "multipart"]}
tower = "0.5.3"
tower-http = {version = "0.6.10", features = ["cors", "trace", "compression-br", "compression-gzip", "fs"]}

# Async runtime
tokio = {version = "1.52.3", features = ["full"]}

# Database
sqlx = {version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json", "uuid"]}

# Serialization
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"

# Configuration
dotenv = "0.15.0"

# Auth
argon2 = "0.5.3"
jsonwebtoken = {version = "10.4.0", features = ["rust_crypto"]}
time = "0.3.47"
uuid = {version = "1.23.1", features = ["serde", "v4"]}

# Error Handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["env-filter"]}

# Http types
http = "1.4.0"

# Time management
chrono = {version = "0.4.44", features = ["serde"]}
humantime = "2.3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1